style: post name

--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,7 @@ input: GFM                            # use Github Flavored Markdown !important
 # Disqus（https://disqus.com/）
 # disqus_username: camel007
 
+<script src="{{ site.baseurl }}/js/md5.min.js"></script>
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
@@ -67,6 +68,7 @@ gitalk:
   repo: camel007.github.io    #仓库名称
   owner: camel007   #github用户名
   admin: camel007
+  id: md5(location.href)
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
