style: change icon

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: YAO Blog
+title: YAO's Blog
 SEOTitle: YAO的博客 | YAO's Blog
 header-img: img/post-bg-desk.jpg
 email: yaozhang.chn@gmail.com
